--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <div>
 
             <p>
-                <label for="daySelect"></label><input type="date" name="daySelect" id="daySelect"
+                <label for="daySelect">Date:</label><input type="date" name="daySelect" id="daySelect"
                                                       oninput="document.getElementById('studyLater').disabled = false;">
 
-                <label for="hourSelect"></label><select id="hourSelect">
+                <label for="hourSelect">Hour:</label><select id="hourSelect">
                 <option value="00:00">12:00 AM</option>
                 <option value="01:00">1:00 AM</option>
                 <option value="02:00">2:00 AM</option>
