--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="apple-mobile-web-app-title" content="Study@WPI">
     <meta name="application-name" content="Study@WPI">
     <meta name="msapplication-TileColor" content="#f9eae1">
-    <meta name="theme-color" content="#f9eae1">
+    <meta name="theme-color" content="#f9eae1" description="Find empty classrooms on the WPI campus! Search for study spaces or group work locations.">
 </head>
 
 <div class="allContainer">
