--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,7 +18,7 @@
     <meta name="apple-mobile-web-app-title" content="Study@WPI">
     <meta name="application-name" content="Study@WPI">
     <meta name="msapplication-TileColor" content="#f9eae1">
-    <meta name="theme-color" content="#f9eae1">
+    <meta name="theme-color" content="#f9eae1" description="About the creators">
 </head>
 
 <div class="allContainer">
