--- a/availableRooms.html
+++ b/availableRooms.html
@@ -24,7 +24,7 @@
     <meta name="apple-mobile-web-app-title" content="Study@WPI">
     <meta name="application-name" content="Study@WPI">
     <meta name="msapplication-TileColor" content="#f9eae1">
-    <meta name="theme-color" content="#f9eae1">
+    <meta name="theme-color" content="#f9eae1" description="Display empty rooms at WPI.">
 </head>
 
 
