--- a/availableRooms.html
+++ b/availableRooms.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/Hackathon2020/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/Hackathon2020/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/Hackathon2020/favicon-16x16.png">
-    <link rel="manifest" href="./Hackathon2020/site.webmanifest">
+    <link rel="manifest" href="./site.webmanifest">
     <link rel="mask-icon" href="/Hackathon2020/safari-pinned-tab.svg" color="#a20021">
     <meta name="apple-mobile-web-app-title" content="Study@WPI">
     <meta name="application-name" content="Study@WPI">
